unpackaged/main/default/objects/BatchByPassSettings__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <label>Batch Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>