unpackaged/main/default/objects/BatchByPassSettings__mdt/fields/Manual_By_pass__c.field-meta.xml
<CustomField>
    <fullName>Manual_By_pass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual By pass</label>
    <type>Checkbox</type>
</CustomField>